# AppGate

./: .gitignore  Cargo.tml  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  scaffold.txt
config/: appgate.toml  ca.pem
config/policy/: foundry.toml
crates/appgate-auth/: Cargo.toml
crates/appgate-auth/src/: main.rs
crates/appgate-ctrl/: Cargo.toml
crates/appgate-ctrl/src/: lib.rs  main.rs
crates/appgate-ctrl/tests/: config_validation.rs
crates/appgate-ipc/: Cargo.toml  build.rs
crates/appgate-ipc/proto/: pdp.proto
crates/appgate-ipc/src/: lib.rs
crates/appgate-mod-foundry/: Cargo.toml
crates/appgate-mod-foundry/src/: main.rs
crates/appgate-mod-http/: Cargo.toml
crates/appgate-mod-http/src/: main.rs
crates/appgate-mod-http/tests/: basic.rs
crates/appgate-mod-tcp/: Cargo.toml
crates/appgate-mod-tcp/src/: main.rs
crates/appgate-mod-udp/: Cargo.toml
crates/appgate-mod-udp/src/: main.rs
crates/appgate-policy/: Cargo.toml
crates/appgate-policy/src/: lib.rs
tests/: e2e_auth.rs  failures.rs
tests/fixtures/keycloak/: realm-export.json
tests/fixtures/tiny-upstream/app/: main.rs
