#[workspace]
[workspace]
members = [
  "crates/appgate-ipc",
  "crates/appgate-policy",
  "crates/appgate-ctrl",
  "crates/appgate-auth",
  "crates/appgate-mod-http",
  "crates/appgate-mod-tcp",
  "crates/appgate-mod-udp",
  "crates/appgate-mod-foundry",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features=["http2"] }
bytes = "1"
clap = { version = "4", features=["derive"] }
dotenvy = "0.15"
hyper = { version = "1", features=["http2","server","client"] }
http = "1"
lazy_static = "1"
opentelemetry = "0.23"
opentelemetry-otlp = "0.16"
prometheus = "0.13"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features=["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_with = "3"
toml = "0.8"
tokio = { version = "1", features=["full"] }
tonic = { version = "0.12", features=["transport"] }
tower = { version = "0.4", features=["util"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter","fmt","json"] }
uds = "0.4"
chrono = "0.4"
testcontainers = { version = "0.21", features = ["blocking", "watchdog"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
thiserror = "1"
once_cell = "1"
