[package]
name = "appgate-ipc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
