[package]
name = "appgate-mod-http"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
appgate-ipc = { path = "../appgate-ipc" }